--- a/public/404.html
+++ b/public/404.html
@@ -14,7 +14,7 @@
 
 <html lang="en-us" dir="ltr"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8" />
-    <title>MultSec Documentation</title>
+    <title>My New Hugo Site</title>
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Lightweight, Modern Documentation Theme for Hugo" />
@@ -63,6 +63,8 @@
             <div id="navigation">
                 
                 <ul class="navigation-menu nav-right">
+                    <li><a href="/docs/">Docs</a></li>
+                    
                 </ul>
             </div>
 
